Mostly finished (adding entries still buggy)

--- a/inventoryManagement/app/views/inventories/index.html.erb
+++ b/inventoryManagement/app/views/inventories/index.html.erb
@@ -1,32 +1,53 @@
-<h1>Inventory List</h1>
 
-<%= form_with url: inventories_path, method: :get, local: true do |form| %>
-  <%= form.label :search, "Search by Item Name:" %>
-  <%= form.text_field :search, value: params[:search], placeholder: "Enter item name..." %>
-  <%= form.submit "Search" %>
-<% end %>
+<html>
+  <head>
+    <title>Inventory Manager</title>
+    <link rel="stylesheet" href="<%= asset_path 'inventory.css' %>" media="all" />
+  </head>
+    <h1 class="inventoryListTitle">Inventory List</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Inventory ID</th>
-      <th>Item Name</th>
-      <th>Location</th>
-      <th>Condition</th>
-      <th>Owner</th>
-      <th>Current User</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @inventories.each do |inventory| %>
-      <tr>
-        <td><%= inventory.inv_id %></td>
-        <td><%= inventory.item.name %></td>
-        <td><%= inventory.location %></td>
-        <td><%= inventory.condition_of_item %></td>
-        <td><%= inventory.original_owner.name %></td>
-        <td><%= inventory.current_user.name %></td>
-      </tr>
+    <%= form_with url: inventories_path, method: :get, local: true, class: "searchForm" do |form| %>
+      <%= form.label :search, "Search by Item Name:", class: "searchLabel" %>
+      <%= form.text_field :search, value: params[:search], placeholder: "Enter item name...", class: "searchInput" %>
+      <%= form.submit "Search", class: "searchButton" %>
     <% end %>
-  </tbody>
-</table>
+
+    <%= link_to "Sign Out", destroy_admin_session_path, class: "signOutLink" %>
+    <%= link_to "New Entry", new_inventory_path, class: "signOutLink" %>
+    <%= link_to 'Show Category', categories_path, class: "signOutLink" %>
+    <%= link_to 'Show Departments', departments_path, class: "signOutLink" %>
+    <%= link_to 'Show Users', users_path, class: "signOutLink" %>
+
+    <table class="inventoryTable">
+      <thead>
+        <tr class="tableHeader">
+          <th class="tableCell">Inventory ID</th>
+          <th class="tableCell">Item Name</th>
+          <th class="tableCell">Purchase Date</th>
+          <th class="tableCell">Location</th>
+          <th class="tableCell">Condition</th>
+          <th class="tableCell">Owner</th>
+          <th class="tableCell">Current User</th>
+          <th class="tableCell">SKU</th>
+          <th class="tableCell">Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @inventories.each do |inventory| %>
+          <tr class="tableRow">
+            <td class="tableCell"><%= inventory.inv_id %></td>
+            <td class="tableCell"><%= inventory.item.name %></td>
+            <td class="tableCell"><%= inventory.year_of_purchase %></td>
+            <td class="tableCell"><%= inventory.location %></td>
+            <td class="tableCell"><%= inventory.condition_of_item %></td>
+            <td class="tableCell"><%= inventory.original_owner.name %></td>
+            <td class="tableCell"><%= inventory.current_user.name %></td>
+            <td class="tableCell"><%= inventory.sku %></td>
+            <td class="tableCell actions">
+              <%= link_to("Delete", delete_inventory_path(inventory), class: "deleteButton") %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+</html>
