added signout link to the other pages.

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -25,4 +25,5 @@
 
 <%= link_to 'New Department', new_department_path %>
 <%= link_to 'Back to Inventory', inventories_path %>
+<%= link_to "Sign Out", destroy_admin_session_path %>
 
