--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,4 +9,4 @@
 </ul>
 <%= link_to "New User", new_user_path %>
 <%= link_to 'Back to Inventory', inventories_path %>
-
+<%= link_to "Sign Out", destroy_admin_session_path %>
