--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -27,4 +27,5 @@
 
 <%= link_to 'New Category', new_category_path %>
 <%= link_to 'Back to Inventory', inventories_path %>
+<%= link_to "Sign Out", destroy_admin_session_path %>
 
